# fuzzy-potato

./: .gitignore  CLAUDE.md  README.md  amplify.yml  deploy.sh  download_docs.py  granicus.md  main.py  probe_clips.py  pyproject.toml
cloudfront/: basic-auth.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: data
frontend/scripts/: build-search-index.js
frontend/src/: App.jsx  index.css
frontend/src/components/: MeetingDetail.jsx  MeetingList.jsx  SearchBar.jsx  TopicFilter.jsx
frontend/src/hooks/: useFlexSearch.js  useMeetings.js  useSearch.js
lambda/: requirements.txt  sync_meetings.py
