[project]
name = "pythonproject"
version = "0.1.0"
description = "LFUCG Meeting Pipeline - Downloads, transcribes, and generates summaries from city council meeting videos"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=5.0.0",
    "openai>=1.0.0",
    "pdf2image>=1.16.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "yt-dlp>=2024.0.0",
]
